kubernetes/raw-manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-lab-ingress
  namespace: platform-lab
spec:
  ingressClassName: nginx
  rules:
    - host: platform-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
